# ctuner

./: .gitignore  CLAUDE.md
cli/: Makefile  tuner_cli.c
python/: pyproject.toml  run.bat
python/ctuner/: __init__.py  accordion.py  cli.py  constants.py  multi_pitch_detector.py  pitch_detector.py  temperaments.py  tuner.py
python/ctuner/gui/: __init__.py  accordion_window.py  measurement_log.py  note_display.py  reed_panel.py  spectrum_view.py  styles.py  tuning_meter.py
python/tests/: test_accordion.py  test_cpp_comparison.py  test_multi_pitch.py  test_multi_pitch_comparison.py  test_pitch_detector.py
swift/: AppDelegate.swift  TunerView.swift
windows/: BUILD.md  CMakeLists.txt  Makefile  Tuner.cpp  Tuner.h  audio.cpp  audio.h  drawing.cpp  drawing.h  fft.cpp  fft.h  setup_imgui.bat
windows/src/: app_state.h  main.cpp
windows/src/audio/: audio_capture.cpp  audio_capture.h  fft.cpp  fft.h  pitch_detector.cpp  pitch_detector.h
windows/src/logging/: frequency_logger.cpp  frequency_logger.h
windows/src/tuning/: built_in_temperaments.h  custom_tunings.cpp  custom_tunings.h  temperament.cpp  temperament.h
windows/src/ui/: log_viewer.cpp  log_viewer.h  main_window.cpp  main_window.h  meter_view.cpp  meter_view.h  settings_panel.cpp  settings_panel.h  spectrum_view.cpp  spectrum_view.h  staff_view.cpp  staff_view.h  strobe_view.cpp  strobe_view.h  tuning_editor.cpp  tuning_editor.h
