[project]
name = "ctuner"
version = "0.1.0"
description = "Instrument tuner with temperament support"
requires-python = ">=3.10"
dependencies = [
    "aubio>=0.4.9",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ctuner = "ctuner.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
