[project]
name = "ctuner"
version = "0.1.0"
description = "Instrument tuner with temperament support"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ctuner = "ctuner.cli:main"
accordion-tuner = "ctuner.gui.accordion_window:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, variables)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip() without strict= (we know lengths match)
]

[tool.ruff.lint.isort]
known-first-party = ["ctuner"]
